--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                   <p style="color: greenyellow; font-size: 35px;">xxxxxxxxxxxxxxxxxxx</p>
                 </div>
                 <div class="col-8" style="padding-top: 150px; padding-left: 400px;">
-                  <img src="/images/snoop-dogg-rap.gif" alt="">
+                  <img src="../images/snoop-dogg-rap.gif" alt="">
                 </div>
               </div>
             </div>
