--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
-<body style=" font-family: 'Permanent Marker', cursive; " >
+<body style=" font-family: 'Permanent Marker', cursive; background-image: url(images/fondo.png); ">
   <div id="home">
    
 </div>
